--- a/src/components/ProductImageGallery.astro
+++ b/src/components/ProductImageGallery.astro
@@ -1,7 +1,7 @@
 ---
-import { z } from "zod";
-import { ImageResult } from "../utils/schemas";
-import ShopifyImage from "./ShopifyImage.svelte";
+import { z } from 'zod';
+import { ImageResult } from '../utils/schemas';
+import ShopifyImage from './ShopifyImage.svelte';
 
 const ImagesResult = z.object({
   nodes: z.array(ImageResult),
@@ -31,15 +31,15 @@ const { images } = Astro.props as Props;
   </div>
   <div
     class:list={[
-      "grid",
-      "grid-cols-4",
-      "gap-4",
-      "md:order-1",
-      "md:col-span-2",
-      "md:flex",
-      "md:flex-col",
-      "md:gap-6",
-      { "md:justify-between": images.nodes.length > 2 },
+      'grid',
+      'grid-cols-4',
+      'gap-4',
+      'md:order-1',
+      'md:col-span-2',
+      'md:flex',
+      'md:flex-col',
+      'md:gap-6',
+      { 'md:justify-between': images.nodes.length > 2 },
     ]}
   >
     {
