--- a/src/components/ProductReviews.astro
+++ b/src/components/ProductReviews.astro
@@ -1,8 +1,8 @@
 <!-- This code uses the Reviews component from HyperUI
 (https://www.hyperui.dev/components/ecommerce/reviews#component-1)
 Thank you to the HyperUI team for providing this open source component. -->
-<div class="mt-10 mb-20 scroll-mt-20" id="reviews">
-  <h2 class="text-xl font-bold sm:text-2xl">Customer Reviews</h2>
+<div class="mb-20 mt-10 scroll-mt-20" id="reviews">
+  <h2 class="text-xl sm:text-2xl font-bold">Customer Reviews</h2>
 
   <div class="mt-4 flex items-center gap-4">
     <p class="text-3xl font-medium">
@@ -14,7 +14,7 @@ Thank you to the HyperUI team for providing this open source component. -->
       <div class="flex">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-5 w-5 text-yellow-400"
+          class="text-yellow-400 h-5 w-5"
           viewBox="0 0 20 20"
           fill="currentColor"
         >
@@ -24,7 +24,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         </svg>
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-5 w-5 text-yellow-400"
+          class="text-yellow-400 h-5 w-5"
           viewBox="0 0 20 20"
           fill="currentColor"
         >
@@ -34,7 +34,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         </svg>
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-5 w-5 text-yellow-400"
+          class="text-yellow-400 h-5 w-5"
           viewBox="0 0 20 20"
           fill="currentColor"
         >
@@ -44,7 +44,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         </svg>
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-5 w-5 text-yellow-400"
+          class="text-yellow-400 h-5 w-5"
           viewBox="0 0 20 20"
           fill="currentColor"
         >
@@ -54,7 +54,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         </svg>
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-5 w-5 text-gray-200"
+          class="text-gray-200 h-5 w-5"
           viewBox="0 0 20 20"
           fill="currentColor"
         >
@@ -64,7 +64,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         </svg>
       </div>
 
-      <p class="mt-0.5 text-xs text-gray-500">Based on 42 reviews</p>
+      <p class="text-xs text-gray-500 mt-0.5">Based on 42 reviews</p>
     </div>
   </div>
 
@@ -74,7 +74,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         <div class="flex">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -84,7 +84,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -94,7 +94,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -104,7 +104,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -114,7 +114,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-gray-200"
+            class="text-gray-200 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -127,10 +127,10 @@ Thank you to the HyperUI team for providing this open source component. -->
         <p class="mt-2 font-medium sm:mt-0">The best thing money can buy!</p>
       </header>
 
-      <p class="mt-2 text-gray-700">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam possimus
-        fuga dolor rerum dicta, ipsum laboriosam est totam iusto alias incidunt
-        cum tempore aliquid aliquam error quisquam ipsam asperiores! Iste?
+      <p class="text-gray-700 mt-2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam possimus fuga dolor rerum dicta, ipsum
+        laboriosam est totam iusto alias incidunt cum tempore aliquid aliquam error quisquam ipsam asperiores!
+        Iste?
       </p>
 
       <footer class="mt-4">
@@ -143,7 +143,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         <div class="flex">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -153,7 +153,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -163,7 +163,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -173,7 +173,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -183,7 +183,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-gray-200"
+            class="text-gray-200 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -196,10 +196,10 @@ Thank you to the HyperUI team for providing this open source component. -->
         <p class="mt-2 font-medium sm:mt-0">The best thing money can buy!</p>
       </header>
 
-      <p class="mt-2 text-gray-700">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam possimus
-        fuga dolor rerum dicta, ipsum laboriosam est totam iusto alias incidunt
-        cum tempore aliquid aliquam error quisquam ipsam asperiores! Iste?
+      <p class="text-gray-700 mt-2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam possimus fuga dolor rerum dicta, ipsum
+        laboriosam est totam iusto alias incidunt cum tempore aliquid aliquam error quisquam ipsam asperiores!
+        Iste?
       </p>
 
       <footer class="mt-4">
@@ -212,7 +212,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         <div class="flex">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -222,7 +222,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -232,7 +232,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -242,7 +242,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -252,7 +252,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-gray-200"
+            class="text-gray-200 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -265,10 +265,10 @@ Thank you to the HyperUI team for providing this open source component. -->
         <p class="mt-2 font-medium sm:mt-0">The best thing money can buy!</p>
       </header>
 
-      <p class="mt-2 text-gray-700">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam possimus
-        fuga dolor rerum dicta, ipsum laboriosam est totam iusto alias incidunt
-        cum tempore aliquid aliquam error quisquam ipsam asperiores! Iste?
+      <p class="text-gray-700 mt-2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam possimus fuga dolor rerum dicta, ipsum
+        laboriosam est totam iusto alias incidunt cum tempore aliquid aliquam error quisquam ipsam asperiores!
+        Iste?
       </p>
 
       <footer class="mt-4">
@@ -281,7 +281,7 @@ Thank you to the HyperUI team for providing this open source component. -->
         <div class="flex">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -291,7 +291,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -301,7 +301,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -311,7 +311,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-yellow-400"
+            class="text-yellow-400 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -321,7 +321,7 @@ Thank you to the HyperUI team for providing this open source component. -->
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-gray-200"
+            class="text-gray-200 h-5 w-5"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -334,10 +334,10 @@ Thank you to the HyperUI team for providing this open source component. -->
         <p class="mt-2 font-medium sm:mt-0">The best thing money can buy!</p>
       </header>
 
-      <p class="mt-2 text-gray-700">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam possimus
-        fuga dolor rerum dicta, ipsum laboriosam est totam iusto alias incidunt
-        cum tempore aliquid aliquam error quisquam ipsam asperiores! Iste?
+      <p class="text-gray-700 mt-2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam possimus fuga dolor rerum dicta, ipsum
+        laboriosam est totam iusto alias incidunt cum tempore aliquid aliquam error quisquam ipsam asperiores!
+        Iste?
       </p>
 
       <footer class="mt-4">
