--- a/src/layouts/NotFoundLayout.astro
+++ b/src/layouts/NotFoundLayout.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "./BaseLayout.astro";
+import BaseLayout from './BaseLayout.astro';
 
 export interface Props {
   title?: string;
@@ -8,19 +8,16 @@ export interface Props {
 
 Astro.response.status = 404;
 
-const defaultTitle = "Page not found";
+const defaultTitle = 'Page not found';
 
 const { title = defaultTitle, message = defaultTitle } = Astro.props as Props;
 ---
 
 <BaseLayout title={title}>
   <div class="container grid justify-center py-44 text-center">
-    <span class="text-6xl font-bold text-emerald-900">404</span>
-    <h1 class="mt-4 text-xl">{message}</h1>
-    <a
-      href="/"
-      class="mt-6 font-semibold text-emerald-900 hover:text-emerald-700"
-    >
+    <span class="text-6xl text-emerald-900 font-bold">404</span>
+    <h1 class="text-xl mt-4">{message}</h1>
+    <a href="/" class="text-emerald-900 hover:text-emerald-700 mt-6 font-semibold">
       Go back home
       <span aria-hidden="true"> &rarr;</span>
     </a>
