--- a/src/components/AnnouncementBar.astro
+++ b/src/components/AnnouncementBar.astro
@@ -1,9 +1,9 @@
 ---
-const message = "🎄 Free delivery for Christmas 🎁";
+const message = '🎄 Free delivery for Christmas 🎁';
 ---
 
 <div
-  class="flex items-center justify-center bg-gradient-to-r from-[#2ca5d5] to-[#e81cff] px-4 py-2 text-sm font-bold text-white sm:px-6 lg:px-8"
+  class="text-sm text-white flex items-center justify-center bg-gradient-to-r from-[#2ca5d5] to-[#e81cff] px-4 py-2 font-bold sm:px-6 lg:px-8"
 >
   {message}
 </div>
