--- a/src/components/ProductRecommendations.astro
+++ b/src/components/ProductRecommendations.astro
@@ -1,6 +1,6 @@
 ---
-import { getProductRecommendations } from "../utils/shopify";
-import ProductCard from "./ProductCard.astro";
+import { getProductRecommendations } from '../utils/shopify';
+import ProductCard from './ProductCard.astro';
 export interface Props {
   productId: string;
   buyerIP: string;
@@ -18,11 +18,9 @@ const productRecommendations = await getProductRecommendations({
   productRecommendations.length > 0 && (
     <section class="bg-white">
       <div class="py-16 sm:py-24">
-        <h2 class="text-2xl font-bold tracking-tight text-gray-900">
-          Customers also purchased
-        </h2>
+        <h2 class="text-2xl text-gray-900 font-bold tracking-tight">Customers also purchased</h2>
 
-        <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+        <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
           {productRecommendations.map((product) => (
             <ProductCard product={product} />
           ))}
