--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,6 +19,12 @@ const { title, description = defaultDesc } = Astro.props as Props;
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
@@ -28,12 +34,9 @@ const { title, description = defaultDesc } = Astro.props as Props;
     </style>
   </head>
   <body>
-    <AnnouncementBar />
-    <CartDrawer client:idle />
     <Header />
-    <main>
+    <main class="m-16">
       <slot />
     </main>
-    <Footer />
   </body>
 </html>
