--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import NotFoundLayout from "../layouts/NotFoundLayout.astro";
+import NotFoundLayout from '../layouts/NotFoundLayout.astro';
 
 Astro.response.status = 404;
 ---
