--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,7 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import CartDrawer from "../components/CartDrawer.svelte";
-import AnnouncementBar from "../components/AnnouncementBar.astro";
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import Cart from '../components/Cart.svelte';
 
 export interface Props {
   title: string;
@@ -10,7 +9,7 @@ export interface Props {
 }
 
 const defaultDesc =
-  "A lightweight and minimalit Astro starter theme using Shopify with Svelte, Tailwind, and TypeScript.";
+  'A lightweight and minimalit Astro starter theme using Shopify with Svelte, Tailwind, and TypeScript.';
 
 const { title, description = defaultDesc } = Astro.props as Props;
 ---
@@ -30,13 +29,18 @@ const { title, description = defaultDesc } = Astro.props as Props;
     <title>{title}</title>
     <meta name="description" content={description} />
     <style is:global>
-      @import "../styles/global.css";
+      @import '../styles/global.css';
     </style>
   </head>
   <body>
     <Header />
-    <main class="m-16">
-      <slot />
-    </main>
+    <div class="flex justify-between">
+      <aside class="min-w-[200px]"></aside>
+      <main class="max-w-[1060px] flex-1">
+        <slot />
+      </main>
+      <aside class="min-w-[200px]"></aside>
+    </div>
+    <Cart client:visible />
   </body>
 </html>
