--- a/src/pages/switches.astro
+++ b/src/pages/switches.astro
@@ -17,8 +17,8 @@ setCache.short(Astro);
   <div class="flex justify-center">
     <div class="flex max-w-screen-xl flex-col gap-2">
       <div class="flex items-baseline gap-8">
-        <h1 class="select-none truncate font-sans text-h1 font-bold">Key switches</h1>
-        <p class="select-none text-h2">({products.length}/{products.length})</p>
+        <h1 class="text-h1 truncate font-sans font-bold select-none">Key switches</h1>
+        <p class="text-h2 select-none">({products.length}/{products.length})</p>
       </div>
       <KeySwitchItemList products={products} />
     </div>
