--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,24 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  html {
-    @apply scroll-smooth;
-  }
-
-  body {
-    @apply flex min-h-screen flex-col;
-    @apply bg-secondary-default;
-    @apply selection:bg-primary-default;
-    @apply selection:text-secondary-default;
-  }
-
-  main {
-    @apply flex-1;
-  }
-
-  h1 {
-    @apply text-h1;
-  }
-}
+@import 'tailwindcss';
