--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Cart from '../components/Cart.svelte';
 import '../styles/global.css';
+import Breadcrumb from '../components/Breadcrumb.astro';
 
 export interface Props {
   title: string;
@@ -30,11 +31,12 @@ const { title, description = defaultDesc } = Astro.props as Props;
     <title>{title}</title>
     <meta name="description" content={description} />
   </head>
-  <body>
+  <body class="bg-eggwhite">
     <Header />
-    <div class="flex justify-center">
+    <div class="mt-12 flex justify-center">
       <aside class="min-w-[200px]"></aside>
       <main class="max-w-[1060px] flex-1">
+        <Breadcrumb />
         <slot />
       </main>
       <aside class="min-w-[200px]"></aside>
