--- a/src/pages/switches.astro
+++ b/src/pages/switches.astro
@@ -4,6 +4,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import Products from '../components/Products.astro';
 import { setCache } from '../utils/cache';
 import KeySwitchItemList from '../components/KeySwitchItemList.astro';
+import Filters from '../components/Filters.astro';
 
 const title = 'Key switches';
 const headers = Astro.request.headers;
@@ -15,12 +16,12 @@ setCache.short(Astro);
 
 <BaseLayout title={title}>
   <div class="flex justify-center">
-    <div class="flex max-w-screen-xl flex-col gap-2">
-      <div class="flex items-baseline gap-8">
-        <h1 class="text-h1 truncate font-sans font-bold select-none">Key switches</h1>
-        <p class="text-h2 select-none">({products.length}/{products.length})</p>
+    <div class="flex max-w-screen-xl flex-col gap-24">
+      <h1 class="truncate text-9xl font-bold select-none">Key switches</h1>
+      <div>
+        <Filters />
+        <KeySwitchItemList products={products} />
       </div>
-      <KeySwitchItemList products={products} />
     </div>
   </div>
 </BaseLayout>
