--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,7 @@
 @import 'tailwindcss';
+
+@theme {
+  --font-display: 'Space Grotesk', 'sans';
+  --font-sans: 'Space Grotesk', 'sans';
+  --color-eggwhite: #e0d6cc;
+}
