--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -3,8 +3,13 @@
 ---
 
 <div class="flex gap-7">
-  <select></select>
-  <select></select>
-  <select></select>
-  <select></select>
+  <select class="w-[250px] rounded-sm border-2 px-4 py-1.5">
+    <option value="">--Please choose an option--</option>
+    <option value="dog">Dog</option>
+    <option value="cat">Cat</option>
+    <option value="hamster">Hamster</option>
+    <option value="parrot">Parrot</option>
+    <option value="spider">Spider</option>
+    <option value="goldfish">Goldfish</option>
+  </select>
 </div>
